# crossflow

./: .gitignore  Cargo.toml  README.md  biome.json  diagram.schema.json  index.html  pnpm-lock.yaml  pnpm-workspace.yaml  registry.schema.json
.github/workflows/: ci_frontend.yaml  ci_linux.yaml  ci_web.yaml  ci_windows.yaml  style.yaml  triage.yml
crossflow-python/: Cargo.toml  README.md  pyproject.toml
crossflow-python/examples/: basic_usage.py
crossflow-python/src/: lib.rs
diagram-editor/: Cargo.toml  FRONTEND_DEBUGGING.md  README.md  build.rs  jest-setup.ts  package.json  rsbuild.config.ts
diagram-editor/frontend/: add-operation.tsx  api.preprocessed.schema.json  app.css  app.tsx  command-panel.tsx  compatible-add-operation.tsx  connection-compatibility-provider.tsx  connection-hint-panel.tsx  debug-visualization-provider.tsx  diagram-editor.tsx  diagram-properties-drawer.tsx  diagram-properties-provider.tsx  diagram-side-panel.tsx  export-diagram-dialog.tsx  handles.tsx  interaction-visualization-provider.tsx  load-context-provider.tsx  notification-provider.tsx  persist-state.test.ts  persist-state.ts  registry-provider.tsx  run-button.tsx
diagram-editor/scripts/: generate-types.mjs
diagram-editor/server/: basic_executor.rs  frontend.rs  router.rs
diagram-editor/wasm/: Cargo.toml
examples/diagram/calculator/: Cargo.toml  README.md  build.rs
examples/diagram/calculator/diagrams/: carry_object_progress.json  clone_from_buffer.json  countdown.json  fibonacci.json  multiply_by_3.json  python_script_nodes.json  split_and_join.json
examples/diagram/calculator/protos/: calculator.proto  crossflow_service.proto
examples/diagram/calculator/src/: main.rs
examples/diagram/calculator/tests/: e2e.rs
examples/diagram/calculator_ops_catalog/: Cargo.toml
examples/diagram/calculator_ops_catalog/src/: handbook_snippets.rs  lib.rs
examples/diagram/calculator_wasm/: Cargo.toml
examples/diagram/calculator_wasm/src/: lib.rs
examples/diagram/grpc_calculator/: Cargo.toml  README.md  build.rs
examples/diagram/grpc_calculator/diagrams/: multiply_by_3.json
examples/diagram/grpc_calculator/protos/: crossflow_service.proto  runtime_context.proto
examples/diagram/grpc_calculator/src/: main.rs  send-diagram.rs
examples/diagram/traffic_app/: Cargo.toml  README.md  donuts.json  interruptible.json  lane_change.json
examples/diagram/traffic_app/diagrams/: base_workflow.json  change_lane.json  donuts.json  drive.json  join_signal_and_arriving.json  join_signal_and_obstacles.json  listen_signal_and_arriving.json  listen_signal_and_obstacles.json  listen_traffic_state.json  obstacles.json  speed_limit.json  stoplight.json  stoplight_and_obstacles.json  traffic_signal.json  vehicle_check_ready.json
examples/diagram/traffic_app/src/: lib.rs  main.rs
examples/diagram/traffic_ops_catalog/: Cargo.toml
examples/diagram/traffic_ops_catalog/src/: lib.rs  movement.rs  pedestrian.rs  spawn_world.rs  speed_limit.rs  traffic.rs  traffic_signal.rs  user_panel.rs  vehicle.rs
examples/handbook_snippets/: Cargo.toml
examples/handbook_snippets/src/: diagram-snippets.rs  diagram.rs  native-snippets.rs
examples/native/: Cargo.toml
examples/native/src/: async_service_example.rs  blocking_service_example.rs  continuous_service_example.rs  delivery_instructions.rs  handbook_snippets.rs  make_a_request.rs
examples/zenoh-examples/: Cargo.toml
handbook/: .gitignore  README.md  book.toml
handbook/scripts/: deploy.sh  publish.sh
handbook/src/: SUMMARY.md  branching.md  buffer-access.md  buffer_access.md  buffers.md  build_a_workflow.md  building-a-chain.md  building_a_series.md  callbacks.md  channels.md  collect.md  connecting-nodes.md  connecting-output-streams.md  creating-a-node.md  cycles.md  delivery-instructions.md  delivery_instructions.md  diagram-editor-ux-roadmap.md  diagram-execution.md  diagram-grpc.md  diagram-middlewares.md  diagram-nodes.md  diagram-registration.md  diagram-ros2.md  diagram-section-builders.md  diagram-section-templates.md  diagram-syntax.md  diagram-zenoh.md  grpc.md  introduction-to-workflows.md  introduction.md  introduction_to_workflows.md  join-rates.md  join.md  json-diagram-syntax.md  json-diagrams.md  json_diagrams.md  listen.md  make_a_request.md  make_a_workflow.md  (+41 more)
macros/: Cargo.toml
macros/src/: derive_buffer.rs  derive_fork.rs  derive_section.rs  derive_stream.rs  derive_stream_pack.rs  lib.rs
src/: buffer.rs  builder.rs  callback.rs  cancel.rs  chain.rs  channel.rs  debug.rs  diagram.rs  disposal.rs  errors.rs  flush.rs  gate.rs  identifier.rs  input.rs  lib.rs  map.rs  map_once.rs  operation.rs  outcome.rs  promise.rs  provider.rs  python.rs  re_exports.rs  reply.rs  request.rs  scripting.rs  series.rs  service.rs  session.rs  stream.rs  testing.rs  trace.rs  trim.rs  type_info.rs  utils.rs  workflow.rs
src/async_execution/: mod.rs  single_threaded_execution.rs
src/buffer/: accessor.rs  any_buffer.rs  buffer_access_lifecycle.rs  buffer_command.rs  buffer_gate.rs  buffer_key_builder.rs  buffer_manager.rs  buffer_map.rs  buffer_storage.rs  bufferable.rs  buffering.rs  fetch_from_buffer.rs  inspect_buffer.rs  inspect_buffer_sessions.rs  json_buffer.rs  manage_buffer.rs
src/builder/: connect.rs
src/chain/: premade.rs  split.rs  unzip.rs
src/diagram/: buffer_schema.rs  diagram_context.rs  fork_clone_schema.rs  fork_result_schema.rs  generate_schema.rs  grpc.rs  inference.rs  join_schema.rs  node_schema.rs  operation_ref.rs  output_ref.rs  process_bound_python.rs  python_operation.rs  registration.rs  scope_schema.rs  script_schema.rs  section_schema.rs  serialization.rs  split_schema.rs  stream_out_schema.rs  testing.rs  transform_schema.rs  unzip_schema.rs  workflow_builder.rs  zenoh.rs
src/node/: dyn_node.rs
src/operation/: branching.rs  cleanup.rs  collect.rs  filter.rs  fork_clone.rs  fork_unzip.rs  injection.rs  join.rs  listen.rs  noop.rs  operate_buffer.rs  operate_buffer_access.rs  operate_callback.rs  operate_cancel.rs  operate_gate.rs  operate_map.rs  operate_service.rs  operate_split.rs  operate_task.rs  (+3 more)
(+97 files in other folders)
