[package]
name = "crossflow-native-api-examples"
version = "0.0.4"
edition = "2021"

[[bin]]
name = "delivery-instructions"
path = "src/delivery_instructions.rs"

[[bin]]
name = "handbook-snippets"
path = "src/handbook_snippets.rs"

[dependencies]
crossflow = { path = "../../" }
async-std = "1.12"
bevy_ecs = { workspace = true }
bevy_derive = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
glam = "*"
