[package]
name = "calculator_ops_catalog"
version = "0.0.4"
edition = "2021"
description = "catalog of reusable calculator operations"

[[bin]]
name = "handbook-snippets"
path = "src/handbook_snippets.rs"

[dependencies]
bevy_app = { workspace = true }
crossflow = { version = "0.0.4", path = "../../..", features = ["diagram"] }
bevy_time = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
