[package]
name = "calculator_ops_catalog"
version = "0.0.6"
edition = "2024"
description = "catalog of reusable calculator operations"

[dependencies]
bevy_app = { workspace = true }
crossflow = { version = "0.0.6", path = "../../..", features = ["diagram"] }
bevy_time = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
tracing-subscriber = { workspace = true }
