[package]
name = "calculator_wasm"
version = "0.0.5"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy_app = { workspace = true }
crossflow = { version = "0.0.5", path = "../../.." }
crossflow_diagram_editor_wasm = { version = "0.0.5", path = "../../../diagram-editor/wasm" }
calculator_ops_catalog = { version = "0.0.5", path = "../calculator_ops_catalog" }
wasm-bindgen = { workspace = true }
wasm-logger = "0.2"
