[package]
name = "traffic_ops_catalog"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
bevy_color = { version = "0.16" }
bevy_ecs = { workspace = true }
bevy_egui = { version = "0.34" }
crossflow = { version = "0.0.6", path = "../../..", features = ["diagram"] }
crossflow_diagram_editor = { path = "../../../diagram-editor", features = ["basic_executor"] }
rand = { workspace = true }
rmf_site_egui = { version = "0.0.2" }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = "2.0.16"
tokio = { workspace = true, features = ["time"] }
